objects/PADummycustomerMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom settings is used to map BU, SalesOrg and Customer code for dummy customers.</description>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Organization</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PADummycustomerMapping</label>
</CustomObject>